# PIM-Matrix-Multiplication-Compiler

./: CMakeLists.txt  README.md  build.sh  interactive_run.sh  pim_simulator.py  run_example.sh  run_tests.sh  test_various_formats.sh
examples/: custom_matmul.cpp
include/: pim_compiler.h
src/: core_sequence.cpp  enhanced_parser.cpp  isa_generator.cpp  main.cpp  memory_layout.cpp  parallelizer.cpp  parser.cpp  three_address.cpp
test/: test_compiler.cpp  test_enhanced_parser.cpp
